@@ -1,7 +1,7 @@
-package com.admission.utils;
+package com.admission.security;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -11,23 +11,17 @@ import com.admission.entity.User;
 
 public class CustomUserDetails implements UserDetails {
 
-    /**
-	 * 
-	 */
-	private static final long serialVersionUID = 5564877254901294920L;
-	private final User user;
+    private final User user;
 
     public CustomUserDetails(User user) {
         this.user = user;
     }
 
-    public User getUser() {
-        return user;
-    }
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(user.getRole().getRoleName()));
+        return List.of(
+            new SimpleGrantedAuthority("ROLE_" + user.getRole().getRoleName())
+        );
     }
 
     @Override
@@ -41,15 +35,26 @@ public class CustomUserDetails implements UserDetails {
     }
 
     @Override
-    public boolean isAccountNonExpired() { return true; }
+    public boolean isAccountNonExpired() {
+        return true;
+    }
 
     @Override
-    public boolean isAccountNonLocked() { return !user.isLocked(); }
+    public boolean isAccountNonLocked() {
+        return !user.isLocked();
+    }
 
     @Override
-    public boolean isCredentialsNonExpired() { return true; }
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
 
     @Override
-    public boolean isEnabled() { return user.isEnabled(); }
+    public boolean isEnabled() {
+        return user.isEnabled();
+    }
+
+    public User getUser() {
+        return user;
+    }
 }
-
